# cmake-project-template

./: README.md
MyApp/: CMakeLists.txt
MyApp/src/: main.cpp
MyLibA/: CMakeLists.txt
MyLibA/cmake/: MyLibAConfig.cmake.in
MyLibA/include/MyLibA/: MyLibA.h
MyLibA/src/: MyLibA.cpp
MyLibUtils/: CMakeLists.txt
MyLibUtils/cmake/: MyLibUtilsConfig.cmake.in
MyLibUtils/include/MyLibUtils/: MyLibUtils.h
MyLibUtils/src/: .MyLibUtils.cpp.swp  MyLibUtils.cpp
superbuild/: CMakeLists.txt
